<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonServices"
        android:text="@string/button1"
        app:icon="@drawable/dentist"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MainButtonStyle"
         />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:text="@string/button2"
        app:icon="@drawable/appoitment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonServices"
        app:layout_constraintTop_toTopOf="@+id/buttonServices"
        style="@style/MainButtonStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        android:text="@string/button4"
        app:icon="@drawable/agenda"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonServices"
        style="@style/MainButtonStyle"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:text="@string/button3"
        app:icon="@drawable/tips"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3"
        style="@style/MainButtonStyle"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:text="@string/button5"
        app:icon="@drawable/pointer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        style="@style/MainButtonStyle"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:text="@string/button6"
        app:icon="@drawable/contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5"
        style="@style/MainButtonStyle"
        />
</androidx.constraintlayout.widget.ConstraintLayout>